--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -23,7 +23,7 @@
             </ul>
         </div>
 
-        <div class="container margin-left10">
+        <div class="container-fluid margin-left10">
             <div class="row">
                 <div class="col-md-12">
                     {{> breadcrumb}}
