--- a/client/templates/application/layout.html
+++ b/client/templates/application/layout.html
@@ -11,8 +11,12 @@
     </div>
     <footer>
         <div class="container-fluid">
-            <p>{{mf 'footr.imp.by' 'Ohjelmointi '}}<strong>Henri Nybom 2015</strong></p>
-            <p>{{mf 'footr.fork' 'Hae mut '}}<a href="https://github.com/hnybom/levyraati">Musaraati</a></p>
+            <div class="row">
+                <div class="col-xs-12">
+                    <p>{{mf 'footr.imp.by' 'Ohjelmointi '}}<strong>Henri Nybom 2015</strong></p>
+                    <p>{{mf 'footr.fork' 'Hae mut '}}<a href="https://github.com/hnybom/levyraati">Musaraati</a></p>
+                </div>
+            </div>
         </div>
     </footer>
 </template>
