--- a/client/templates/songs/song_item.html
+++ b/client/templates/songs/song_item.html
@@ -1,5 +1,5 @@
 <template name="songItem">
-    <div class="song-grid-item col-md-4 col-sm-6 col-xs-12">
+    <div class="song-grid-item col-md-4 col-sm-6 col-xs-12" data-real-date="{{created}}">
         <div class="song-card margin-bottom flip-container">
             <div class="flipper">
                 <div class="front pad15">
