card height changed to be dominant by the front

--- a/client/templates/songs/song_item.html
+++ b/client/templates/songs/song_item.html
@@ -3,6 +3,7 @@
         <div class="song-card margin-bottom flip-container">
             <div class="flipper">
                 <div class="front pad15">
+                    <div class="spaceme"></div>
                     <h3 class="song-title">{{name}}</h3>
                     <p><span class="created-date">{{formatDateWithoutTime created}}</span>&nbsp;&nbsp;<span class="competitor">{{getUserName this.creator}}</span></p>
                     {{>songPlayer this}}
