login page image grid to act as an placeholder and some stylings to competition listing

--- a/client/templates/competitions/competition_item.html
+++ b/client/templates/competitions/competition_item.html
@@ -1,11 +1,8 @@
 <template name="competitionItem">
     <div class="col-md-4 col-sm-6 col-xs-12 margin-bottom text-justify {{competitionOwnerStyle _id}}">
         <a class="no-link thumbnail" href="{{pathFor 'competitionPage'}}">
-            <div class="text-center">
-
-            </div>
-            <div class="pad30">
-                <h4 class="service-heading">{{name}}</h4>
+            <div class="pad15">
+                <h3>{{name}}</h3>
                 <p class="text-muted">{{description}}</p>
             </div>
         </a>
