--- a/client/templates/competitions/competition_page.html
+++ b/client/templates/competitions/competition_page.html
@@ -17,7 +17,7 @@
             {{/each}}
         </div>
     </div>
-
+    <div class="spaceme"></div>
     <div id="chat-button" class="chat-button">{{mf 'competition.chat.open' 'Avaa chat'}}</div>
     <div id="chat-box" class="chat-container" style="display: none">
         {{>chat chats=chats competitionId=competition._id}}
