--- a/client/stylesheets/common.scss
+++ b/client/stylesheets/common.scss
@@ -9,7 +9,8 @@ h3 {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-items: stretch;
+  align-items: center;
+  justify-content: center;
 }
 
 .thumbnail {
