--- a/client/templates/competitions/competitions_list.html
+++ b/client/templates/competitions/competitions_list.html
@@ -1,7 +1,7 @@
 <template name="competitionsList">
     <div class="row">
         <div class="col-xs-12">
-            <h3>{{mf 'competitions.open' 'Avoimet kilpailut'}}</h3>
+            <h3 class="list-heading">{{mf 'competitions.open' 'Avoimet kilpailut'}}</h3>
         </div>
     </div>
     <div class="row text-center open-competitions competitions">
@@ -12,7 +12,7 @@
 
     <div class="row">
         <div class="col-xs-12">
-            <h3>{{mf 'competitions.closed' 'Päättyneet kilpailut'}}</h3>
+            <h3 class="list-heading">{{mf 'competitions.closed' 'Päättyneet kilpailut'}}</h3>
         </div>
     </div>
     <div class="row text-center spaceme closed-competitions competitions">
