--- a/client/stylesheets/competition_list.scss
+++ b/client/stylesheets/competition_list.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 .competitions {
   padding-bottom: 20px;
 }
@@ -6,10 +8,8 @@
   text-transform: uppercase;
 }
 
-.open-competitions .owner .text-primary {
-  color: #5CB85C;
-}
 
-.open-competitions .text-primary {
-  color: #FED136;
+.list-heading {
+  color: #000;
+  font-weight: bold;
 }
