user list color changed

--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -160,7 +160,7 @@ a:hover {
 .user-list li {
     padding: 5px;
     margin: 5px;
-    background-color: #2B77BA;
+    background-color: #5cb85c;
     color: #ffffff;
 }
 
