--- a/client/templates/includes/competition_actions.html
+++ b/client/templates/includes/competition_actions.html
@@ -24,7 +24,7 @@
                                     <span class="user-name">{{getUserName competition.creator}}</span>
                                 </li>
                                 {{#each competition.users}}
-                                    <li class="btn btn-md">
+                                    <li class="btn btn-success btn-md">
                                         <span class="user-name">{{getUserName this}}</span>
                                         {{#if isCreator ..}}
                                             <a class="remove-user" data-userid="{{this}}">X</a>
