jumbotron max width fix

--- a/client/stylesheets/common.scss
+++ b/client/stylesheets/common.scss
@@ -2,6 +2,12 @@ h3 {
   text-transform: uppercase;
 }
 
+.jumbotron {
+  .container-fluid {
+    max-width: 1400px;
+  }
+}
+
 .center {
   text-align: center;
 }
