--- a/client/stylesheets/flipper.scss
+++ b/client/stylesheets/flipper.scss
@@ -17,6 +17,7 @@
 /* hide back of pane during swap */
 .front, .back {
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 }
 
 /* front pane, placed above back */
